// Vey Address gRPC Protocol Buffer Definition
// Generated by @vey/grpc

syntax = "proto3";

package vey.address.v1;

option go_package = "github.com/vey/address/v1;addressv1";
option java_package = "com.vey.address.v1";
option java_multiple_files = true;

// Address service for validation and management
service AddressService {
  // Validate an address against country-specific rules
  rpc ValidateAddress(ValidateAddressRequest) returns (ValidateAddressResponse);
  
  // Get address by ID
  rpc GetAddress(GetAddressRequest) returns (Address);
  
  // Create a new address
  rpc CreateAddress(CreateAddressRequest) returns (Address);
  
  // Update an existing address
  rpc UpdateAddress(UpdateAddressRequest) returns (Address);
  
  // Delete an address
  rpc DeleteAddress(DeleteAddressRequest) returns (DeleteAddressResponse);
  
  // Get country format configuration
  rpc GetCountryFormat(GetCountryFormatRequest) returns (CountryFormat);
  
  // List all supported countries
  rpc ListCountries(ListCountriesRequest) returns (ListCountriesResponse);
  
  // Get region hierarchy for picker UI
  rpc GetRegionHierarchy(GetRegionHierarchyRequest) returns (GetRegionHierarchyResponse);
  
  // Stream address updates
  rpc StreamAddressUpdates(StreamAddressUpdatesRequest) returns (stream AddressUpdate);
}

// Delivery service for tracking shipments
service DeliveryService {
  // Get delivery status
  rpc GetDeliveryStatus(GetDeliveryStatusRequest) returns (DeliveryStatus);
  
  // Stream delivery status updates
  rpc StreamDeliveryUpdates(StreamDeliveryUpdatesRequest) returns (stream DeliveryStatus);
}

// Locker service for pickup locations
service LockerService {
  // Find nearby lockers
  rpc FindNearbyLockers(FindNearbyLockersRequest) returns (FindNearbyLockersResponse);
  
  // Get locker details
  rpc GetLocker(GetLockerRequest) returns (Locker);
  
  // Reserve a locker compartment
  rpc ReserveLocker(ReserveLockerRequest) returns (ReserveLockerResponse);
}

// Address input fields
message AddressInput {
  string recipient = 1;
  string building = 2;
  string floor = 3;
  string room = 4;
  string unit = 5;
  string street_address = 6;
  string district = 7;
  string ward = 8;
  string city = 9;
  string province = 10;
  string postal_code = 11;
  string country = 12;
}

// Full address with metadata
message Address {
  string id = 1;
  string recipient = 2;
  string building = 3;
  string floor = 4;
  string room = 5;
  string unit = 6;
  string street_address = 7;
  string district = 8;
  string ward = 9;
  string city = 10;
  string province = 11;
  string postal_code = 12;
  string country = 13;
  string formatted = 14;
  int64 created_at = 15;
  int64 updated_at = 16;
}

// Validation error details
message ValidationError {
  string field = 1;
  string code = 2;
  string message = 3;
}

// Validation warning details
message ValidationWarning {
  string field = 1;
  string code = 2;
  string message = 3;
}

// Country format configuration
message CountryFormat {
  string country_code = 1;
  string country_name = 2;
  repeated string required_fields = 3;
  repeated string field_order = 4;
  string postal_code_pattern = 5;
  string postal_code_example = 6;
  repeated Language languages = 7;
}

// Language information
message Language {
  string name = 1;
  string script = 2;
  string direction = 3;
  string role = 4;
}

// Delivery status information
message DeliveryStatus {
  string id = 1;
  string address_id = 2;
  string carrier = 3;
  string tracking_number = 4;
  DeliveryStatusEnum status = 5;
  int64 estimated_delivery = 6;
  int64 updated_at = 7;
}

enum DeliveryStatusEnum {
  DELIVERY_STATUS_UNSPECIFIED = 0;
  DELIVERY_STATUS_PENDING = 1;
  DELIVERY_STATUS_PICKED_UP = 2;
  DELIVERY_STATUS_IN_TRANSIT = 3;
  DELIVERY_STATUS_OUT_FOR_DELIVERY = 4;
  DELIVERY_STATUS_DELIVERED = 5;
  DELIVERY_STATUS_FAILED = 6;
}

// Locker information
message Locker {
  string id = 1;
  string name = 2;
  Address address = 3;
  LockerAvailability availability = 4;
  int32 total_compartments = 5;
  int32 available_compartments = 6;
}

enum LockerAvailability {
  LOCKER_AVAILABILITY_UNSPECIFIED = 0;
  LOCKER_AVAILABILITY_AVAILABLE = 1;
  LOCKER_AVAILABILITY_OCCUPIED = 2;
  LOCKER_AVAILABILITY_MAINTENANCE = 3;
}

// Address update event
message AddressUpdate {
  string address_id = 1;
  AddressEventType event_type = 2;
  Address address = 3;
  int64 timestamp = 4;
}

enum AddressEventType {
  ADDRESS_EVENT_TYPE_UNSPECIFIED = 0;
  ADDRESS_EVENT_TYPE_CREATED = 1;
  ADDRESS_EVENT_TYPE_UPDATED = 2;
  ADDRESS_EVENT_TYPE_DELETED = 3;
  ADDRESS_EVENT_TYPE_VERIFIED = 4;
}

// Region hierarchy for picker
message Region {
  string continent = 1;
  repeated CountryInfo countries = 2;
}

message CountryInfo {
  string code = 1;
  string name = 2;
  repeated ProvinceInfo provinces = 3;
}

message ProvinceInfo {
  string code = 1;
  string name = 2;
  repeated CityInfo cities = 3;
}

message CityInfo {
  string code = 1;
  string name = 2;
  repeated DistrictInfo districts = 3;
}

message DistrictInfo {
  string code = 1;
  string name = 2;
}

// Request/Response messages

message ValidateAddressRequest {
  AddressInput address = 1;
  string country_code = 2;
}

message ValidateAddressResponse {
  bool valid = 1;
  repeated ValidationError errors = 2;
  repeated ValidationWarning warnings = 3;
  Address normalized = 4;
}

message GetAddressRequest {
  string id = 1;
}

message CreateAddressRequest {
  AddressInput address = 1;
}

message UpdateAddressRequest {
  string id = 1;
  AddressInput address = 2;
}

message DeleteAddressRequest {
  string id = 1;
}

message DeleteAddressResponse {
  bool success = 1;
}

message GetCountryFormatRequest {
  string country_code = 1;
}

message ListCountriesRequest {
  string region_filter = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListCountriesResponse {
  repeated CountryFormat countries = 1;
  string next_page_token = 2;
}

message GetRegionHierarchyRequest {}

message GetRegionHierarchyResponse {
  repeated Region regions = 1;
}

message StreamAddressUpdatesRequest {
  repeated string address_ids = 1;
}

message GetDeliveryStatusRequest {
  string id = 1;
}

message StreamDeliveryUpdatesRequest {
  string address_id = 1;
}

message FindNearbyLockersRequest {
  double latitude = 1;
  double longitude = 2;
  double radius_km = 3;
  int32 limit = 4;
}

message FindNearbyLockersResponse {
  repeated Locker lockers = 1;
}

message GetLockerRequest {
  string id = 1;
}

message ReserveLockerRequest {
  string locker_id = 1;
  string address_id = 2;
  int64 expires_at = 3;
}

message ReserveLockerResponse {
  string reservation_id = 1;
  string compartment_id = 2;
  string access_code = 3;
  int64 expires_at = 4;
}
